@@ -14,7 +14,13 @@ stage_two do
     filename = 'app/controllers/sessions_controller.rb'
     copy_from_repo filename, :repo => repo
     gsub_file filename, /twitter/, prefs[:omniauth_provider] unless prefer :omniauth_provider, 'twitter'
-    copy_from_repo 'config/routes.rb', :repo => repo
+    routes = <<-TEXT
+  get '/auth/:provider/callback' => 'sessions#create'
+  get '/signin' => 'sessions#new', :as => :signin
+  get '/signout' => 'sessions#destroy', :as => :signout
+  get '/auth/failure' => 'sessions#failure'
+TEXT
+    inject_into_file 'config/routes.rb', routes + "\n", :after => "routes.draw do\n"
   end
   ### GIT ###
   git :add => '-A' if prefer :git, true
